# sar_journal

./: .gitignore  README.md  README.org  journal_sar.py  pyproject.toml
src/sar_journal/: __init__.py  app.py  config.py  constants.py  footer.py  journal.py  sar_journal.tcss  stats.py  ui.py
tests/: test_basic.py  test_command_pallet.py  test_ui.py
